# rust_os_practice

./: Cargo.toml  Makefile
src/: main.rs
