[package]
name = "rust_os_practice"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
